Moved cross-domain call to command, refactoring

--- a/module/scripts/dialogs/extract-entities-preview-dialog.html
+++ b/module/scripts/dialogs/extract-entities-preview-dialog.html
@@ -1,17 +1,18 @@
-<div class="dialog-frame extend-data-preview-dialog" style="width: 800px;">
-  <div class="dialog-header" bind="dialogHeader"></div>
-  <div class="dialog-body" bind="dialogBody">
-    <div class="grid-layout layout-normal layout-full">
-    	<div class="dialog-label">Preview text: </div>
-    	<div class="original-text" bind="originalText" style="overflow: auto"></div>
-    	<div class="dialog-label">Extracted entities: </div>
-        <div class="preview-container" bind="previewContainer"></div>
-        <div class="dialog-label">Entity types (select):</div>
-        <div class="extracted-types" bind="extractedTypes"></div>
-  </div>
-  </div>
-  <div class="dialog-footer" bind="dialogFooter">
-    <button class="button" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
-    <button class="button" bind="cancelButton">Cancel</button>
-  </div>
+<div class="dialog-frame extend-data-preview-dialog"
+	style="width: 800px;">
+	<div class="dialog-header" bind="dialogHeader"></div>
+	<div class="dialog-body" bind="dialogBody">
+		<div class="grid-layout layout-normal layout-full">
+			<div class="dialog-label">Preview text:</div>
+			<div class="original-text" bind="originalText" style="overflow: auto"></div>
+			<div class="dialog-label">Extracted entities:</div>
+			<div class="preview-container" bind="previewContainer"></div>
+			<div class="dialog-label">Entity types (select):</div>
+			<div class="extracted-types" bind="extractedTypes"></div>
+		</div>
+	</div>
+	<div class="dialog-footer" bind="dialogFooter">
+		<button class="button" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
+		<button class="button" bind="cancelButton">Cancel</button>
+	</div>
 </div>
