--- a/module/scripts/dialogs/extract-entities-preview-dialog.html
+++ b/module/scripts/dialogs/extract-entities-preview-dialog.html
@@ -12,7 +12,7 @@
 		</div>
 	</div>
 	<div class="dialog-footer" bind="dialogFooter">
-		<button class="button" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
-		<button class="button" bind="cancelButton">Cancel</button>
+		<button class="btn btn-success" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
+		<button class="btn" bind="cancelButton">Cancel</button>
 	</div>
 </div>
