Internationalization of extension

--- a/module/scripts/dialogs/extend-data-preview-dialog.html
+++ b/module/scripts/dialogs/extend-data-preview-dialog.html
@@ -5,10 +5,10 @@
 		<div class="grid-layout layout-normal layout-full">
 			<table rows="2">
 				<tr>
-					<td width="300" height="1"><h3>Suggested Properties</h3></td>
-					<td height="1"><h3>Preview</h3></td>
-					<td height="1" width="1%" style="text-align:right;"><button class="btn btn-inverse"
-							bind="resetButton">Reset</button></td>
+					<td width="300" height="1"><h3 bind="zemext_preview_header"></h3></td>
+					<td height="1"><h3 bind="zemext_preview_preview"></h3></td>
+					<td height="1" width="1%" style="text-align:right;">
+						<button class="btn btn-inverse" bind="resetButton"></button></td>
 				</tr>
 				<tr>
 					<td width="300" style="vertical-align: top;"><div
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="dialog-footer" bind="dialogFooter">
-		<button class="btn btn-success" bind="okButton">&nbsp;&nbsp;OK&nbsp;&nbsp;</button>
-		<button class="btn" bind="cancelButton">Cancel</button>
+		<button class="btn btn-success" bind="okButton"></button>
+		<button class="btn" bind="cancelButton"></button>
 	</div>
 </div>
